# media-intelligence-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  deploy.sh  docker-compose.yml  pyproject.toml
src/: __main__.py
src/api/: __init__.py  app.py
src/api/middleware/: correlation_id.py
src/api/routers/: analyze.py  bridge.py  health.py
src/api/schemas/: requests.py  responses.py
src/domain/: __init__.py
src/domain/entities/: analysis.py  media.py
src/domain/enums/: media_type.py
src/domain/value_objects/: __init__.py  text.py  timestamp.py  url.py
src/infrastructure/config/: __init__.py  logging_config.py  settings.py
src/infrastructure/downloaders/: dom_extractor.py  gallery_dl_downloader.py  html_extractor.py  yt_dlp_downloader.py
src/infrastructure/ocr/: paddle_ocr_engine.py
src/infrastructure/plugins/: base_extractor.py  instagram_extractor.py  youtube_extractor.py
src/infrastructure/recorder/: ffmpeg_recorder.py
src/infrastructure/speech/: groq_whisper_stt.py  whisper_stt.py
src/infrastructure/storage/: local_storage.py
src/infrastructure/vision/: base.py  deepseek_vision.py  gemini_vision.py  gpt_vision.py  qwen_vision.py
src/ports/: __init__.py  downloader.py  ocr_engine.py  plugin.py  recorder.py  speech_to_text.py  storage.py  vision_provider.py
src/services/: __init__.py  dashboard_sink.py  ig_bridge_queue.py  pipeline.py  semantic_analyzer.py
tests/integration/: test_download_and_analyze.py  test_full_analysis.py  test_instagram_download.py
tests/unit/test_domain/: test_analysis.py  test_url.py
